--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kombu==5.4.2
+moviepy==2.2.1
 numpy==2.1.3
 oauthlib==3.2.2
 opencv-python==4.10.0.84
